--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -109,8 +109,10 @@ Buttons-06.png: Buttons-06-16c7cee18209a7b16b93a583899c4e67.png
 Buttons-06/index.png: Buttons-06-16c7cee18209a7b16b93a583899c4e67.png
 Buttons-09.png: Buttons-09-4987bcb119045d361be8eabf93b06455.png
 Buttons-09/index.png: Buttons-09-4987bcb119045d361be8eabf93b06455.png
-Untitled-1.png: Untitled-1-740f762ab118cc855a41715e83be3e72.png
-Untitled-1/index.png: Untitled-1-740f762ab118cc855a41715e83be3e72.png
+Hardware-White.jpg: Hardware-White-f00bf4facce2aed7997196c312886b4e.jpg
+Hardware-White/index.jpg: Hardware-White-f00bf4facce2aed7997196c312886b4e.jpg
+app-title.png: app-title-dfee7cc9fd865360b0f148ea18c204e3.png
+app-title/index.png: app-title-dfee7cc9fd865360b0f148ea18c204e3.png
 app_icon.png: app_icon-684f1d3f9280dc6f5a9567c0cf1d287e.png
 app_icon/index.png: app_icon-684f1d3f9280dc6f5a9567c0cf1d287e.png
 apple-touch-icon-114x114.png: apple-touch-icon-114x114-1f89022174ad39519964449892bb53c5.png
@@ -125,6 +127,8 @@ avatar2.png: avatar2-d213e1eccbdd7924b972ae7104b23f28.png
 avatar2/index.png: avatar2-d213e1eccbdd7924b972ae7104b23f28.png
 blackberry.png: blackberry-7605cb3c97636490490a16a9657fbfaa.png
 blackberry/index.png: blackberry-7605cb3c97636490490a16a9657fbfaa.png
+design.png: design-740f762ab118cc855a41715e83be3e72.png
+design/index.png: design-740f762ab118cc855a41715e83be3e72.png
 diagonal-pattern.png: diagonal-pattern-334e184bde40de8de1aa40d554abd4de.png
 diagonal-pattern/index.png: diagonal-pattern-334e184bde40de8de1aa40d554abd4de.png
 easy.png: easy-79a3aace58b26df8b0813bf4f2ed89f8.png
@@ -161,10 +165,10 @@ gallery/screen5.jpg: gallery/screen5-7569a69d31c6b075ab113462dcdc8012.jpg
 gallery/screen5/index.jpg: gallery/screen5-7569a69d31c6b075ab113462dcdc8012.jpg
 gallery/screen6.jpg: gallery/screen6-7883a32716896dc8c61a4b4aeb004af0.jpg
 gallery/screen6/index.jpg: gallery/screen6-7883a32716896dc8c61a4b4aeb004af0.jpg
-hero-hardware.jpg: hero-hardware-ce8e3827eff059cccaedaafc48fed890.jpg
-hero-hardware/index.jpg: hero-hardware-ce8e3827eff059cccaedaafc48fed890.jpg
 icon-web-x.png: icon-web-x-6111247c2284762c8e2c1f7050d3b43e.png
 icon-web-x/index.png: icon-web-x-6111247c2284762c8e2c1f7050d3b43e.png
+icon.png: icon-5cee2373811ea46c7164342e3ee1594e.png
+icon/index.png: icon-5cee2373811ea46c7164342e3ee1594e.png
 icon_32.png: icon_32-95a218be3616052f12f1178af22db45a.png
 icon_32/index.png: icon_32-95a218be3616052f12f1178af22db45a.png
 icons/android.png: icons/android-de7f8ded42bce036874e737b1b80343b.png
@@ -211,18 +215,12 @@ pinstripe.gif: pinstripe-4a2bd7853f5bb7691364928336214381.gif
 pinstripe/index.gif: pinstripe-4a2bd7853f5bb7691364928336214381.gif
 play_store.png: play_store-8634fcb616a25066fcec1191aee88c92.png
 play_store/index.png: play_store-8634fcb616a25066fcec1191aee88c92.png
-qwikiGalaxyBlack.png: qwikiGalaxyBlack-1f3dc0f9812d71b35b5f32ec238d411d.png
-qwikiGalaxyBlack/index.png: qwikiGalaxyBlack-1f3dc0f9812d71b35b5f32ec238d411d.png
-qwikiGalaxyWhite.png: qwikiGalaxyWhite-f5e46492e0932a7dfbe0af1b15830ad5.png
-qwikiGalaxyWhite/index.png: qwikiGalaxyWhite-f5e46492e0932a7dfbe0af1b15830ad5.png
 qwiki_s.png: qwiki_s-40ab5aaf08e4f076ac7eeb429ed3b3d7.png
 qwiki_s/index.png: qwiki_s-40ab5aaf08e4f076ac7eeb429ed3b3d7.png
 qwiki_sx.png: qwiki_sx-eda26a62f2912ac37b8ce9170ed72a23.png
 qwiki_sx/index.png: qwiki_sx-eda26a62f2912ac37b8ce9170ed72a23.png
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-s4w.jpg: s4w-0f370b67a653daa767dfca8d9b9518c8.jpg
-s4w/index.jpg: s4w-0f370b67a653daa767dfca8d9b9518c8.jpg
 sidephone-big.png: sidephone-big-189c517167161c915be5618e132ad9d0.png
 sidephone-big/index.png: sidephone-big-189c517167161c915be5618e132ad9d0.png
 sidephone-small.png: sidephone-small-ac0f18470d4713c1b2692ef7bed8b692.png
@@ -233,18 +231,10 @@ static-tablet.jpg: static-tablet-ebe14f67949d16407b8b5b5eb8c10842.jpg
 static-tablet/index.jpg: static-tablet-ebe14f67949d16407b8b5b5eb8c10842.jpg
 swift.png: swift-48b1a52bcf16a4927782c506f83f484f.png
 swift/index.png: swift-48b1a52bcf16a4927782c506f83f484f.png
-title.png: title-69caf0a3fca775603ad8f05e6bc64928.png
-title/index.png: title-69caf0a3fca775603ad8f05e6bc64928.png
-zoom/detail-small.jpg: zoom/detail-small-78aa225712400a549103300bf00bbc06.jpg
-zoom/detail-small/index.jpg: zoom/detail-small-78aa225712400a549103300bf00bbc06.jpg
-zoom/loupe.png: zoom/loupe-521f25014b51584b5238c1438f22c8fe.png
-zoom/loupe/index.png: zoom/loupe-521f25014b51584b5238c1438f22c8fe.png
-zoom/placeholder.png: zoom/placeholder-887dcacf11b259b2a3bc4a506dd66c59.png
-zoom/placeholder/index.png: zoom/placeholder-887dcacf11b259b2a3bc4a506dd66c59.png
 application.js: application-d0a526c38666aff65cbbc2000e9dde3c.js
 application/index.js: application-d0a526c38666aff65cbbc2000e9dde3c.js
-application.css: application-52b26c5c2bd316c93b74f1da0e83dc50.css
-application/index.css: application-52b26c5c2bd316c93b74f1da0e83dc50.css
+application.css: application-cf509f097237b7fd42eae629b161288f.css
+application/index.css: application-cf509f097237b7fd42eae629b161288f.css
 jquery-ui/animated-overlay.gif: jquery-ui/animated-overlay-602eee4c79a4796b02bb6442948c9e28.gif
 jquery-ui/animated-overlay/index.gif: jquery-ui/animated-overlay-602eee4c79a4796b02bb6442948c9e28.gif
 jquery-ui/ui-bg_flat_0_aaaaaa_40x100.png: jquery-ui/ui-bg_flat_0_aaaaaa_40x100-7d1197a52442bc56fcad60d0390f4b32.png
